# fitness-partner

./: .gitignore  .npmrc  CLAUDE.md  Makefile  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.codex/: AGENTS.md
.github/workflows/: ci.yml
docs/: agentic-static.md  architecture.md  harness.md  reference.md  skill-stack.md  ui-architecture.md
docs/references/: keyword-search-is-all-you-need.md  llm-knowledge-base-karpathy.md
docs/superpowers/plans/: 2026-04-11-plan-01-monorepo-contracts.md  2026-04-12-plan-02-fitness-engine.md  2026-04-12-plan-03-aws-bootstrap.md  2026-04-12-plan-04-food-catalog-etl.md  2026-04-13-plan-05-lambda-tools.md  2026-04-14-plan-06-nextjs-bootstrap.md  2026-04-19-plan-07-onboarding.md  2026-04-20-plan-08-plan-generation.md  2026-04-24-plan-09-meal-swap.md
docs/superpowers/specs/: 2026-04-11-design-decisions.md  2026-04-12-food-catalog-etl-design.md  2026-04-13-lambda-tools-design.md  2026-04-14-nextjs-bootstrap-design.md  2026-04-19-onboarding-design.md  2026-04-20-plan-08-plan-generation-design.md  2026-04-24-plan-09-meal-swap-design.md
infra/: README.md  cdk.json  package.json  tsconfig.json  vitest.config.ts
infra/agents/plan-generator/: .dockerignore  Dockerfile  README.md  pyproject.toml
infra/agents/plan-generator/src/plan_generator/: agent.py  handler.py
infra/agents/plan-generator/src/plan_generator/prompts/: food_hints.py  system.py  system_swap.py
infra/agents/plan-generator/src/plan_generator/tools/: calorie_macro.py  get_food_by_id.py  hydration.py  supplements.py
infra/agents/plan-generator/tests/: test_agent_e2e.py  test_agent_swap_e2e.py  test_handler.py  test_prompts_system_swap.py  test_tools_calorie_macro.py  test_tools_get_food_by_id.py  test_tools_hydration.py  test_tools_supplements.py
infra/lambdas/fetch-user-profile/: index.ts
infra/lambdas/fetch-weekly-plan/: index.ts
infra/lambdas/generate-plan/: README.md  agentcore-client.ts  index.ts  mappers.ts
infra/lambdas/hello/: index.ts
infra/lambdas/log-meal/: index.ts
infra/lambdas/shared/: auth.ts  (+19 more)
infra/lib/: fitness-stack.ts  plan-generator-stack.ts
infra/test/: fitness-stack.test.ts
(+45 files in other folders)
