[project]
name = "ai-fitness-partner-workspace"
version = "0.0.0"
description = "ai-fitness-partner Python パッケージの workspace ルート"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/contracts-py", "packages/fitness-engine"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = [
  "packages/contracts-py/tests",
  "packages/fitness-engine/tests",
]
python_files = ["test_*.py"]
# 複数パッケージの tests/ モジュール名衝突を避けるため importlib モードを使用
# (参考: https://docs.pytest.org/en/stable/explanation/pythonpath.html#import-modes)
addopts = "--import-mode=importlib"

[tool.coverage.run]
source = ["packages/fitness-engine/src/fitness_engine"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
